tests/fixtures/invalid/list_sub_int.py
# Cannot subtract List[int] and Int
x: list[int] = [1, 2, 3] - 1
